-
Bug
-
Resolution: Done
-
P1: Critical
-
4.8.5, 5.2.0
-
None
-
XCode 4.6.1, OS X 10.7.5
-
-
10bd8e2104331e26ead4d3e43a41f997693fd494
OS X: After building Qt from source and installing as below, the Info.plist file for each Qt framework (QtCore.framework, QtGui.framework, etc) contains an incorrect CFBundleExecutable field. The field names the *_debug version of the library.
This was previously mentioned in QTBUG-2613
Here are the build parameters that I used:
./configure -opensource -debug-and-release -no-qt3support -no-declarative -no-script -no-multimedia -no-audio-backend -no-phonon -no-phonon-backend -no-webkit -nomake examples -nomake demos -nomake docs -arch x86
make
sudo make install
Then inspect /usr/local/Trolltech/Qt-4.8.5/lib/QtCore.framework/Contents/Info.plist
- is required for
-
QTBUG-32896 OS X Frameworks can not be code signed correctly, existing instructions are incorrect
-
- Closed
-
| For Gerrit Dashboard: QTBUG-32894 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 95455,5 | Don't make Info.plist for debug framework bundles | 5.3 | qt/qtbase | Status: MERGED | +2 | 0 |